Fix TracklistContainer tablehead spacing

--- a/src/css/modules/_TracklistContainer.module.css
+++ b/src/css/modules/_TracklistContainer.module.css
@@ -42,7 +42,7 @@
 
 .tableheadWrapper {
   display: grid;
-  grid-template-columns: 3fr 2fr;
+  grid-template-columns: 3fr 2.6fr;
   width: 100%;
   padding-bottom: 2rem;
   text-align: left;
